<resources>
    <string name="app_name">LazyVision</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="donthave">"don't have an id ? Signup."</string>
    <string name="login">"LOGIN"</string>
    <string name="lazyvision">LazyVision</string>
    <string name="developedby">developed by LazyBeans</string>
    <string name="signup">SIGNUP</string>
    <string name="alreadyhave">"already have an id ? Login."</string>
    <string name="driving" />
    <string name="train" />
    <string name="walking" />
    <string name="cycling" />
    <string name="climbing" />
    <string name="flight" />
    <string name="todo" />
    <string name="ocr">OCR</string>
    <string name="welcome">Welcome!</string>
    <string name="youremail_lazyvision_com">youremail@lazyvision.in</string>
    <string name="label_vision">LABEL VISION</string>
    <string name="edge_vision">EDGE VISION</string>
    <string name="place_vision">PLACE VISION</string>
    <string name="text_vision">TEXT VISION</string>
    <string name="object_vision">OBJECT VISION</string>
    <string name="face_vision">FACE VISION</string>
    <string name="logout">LOGOUT</string>
    <string name="case_no">Case No.</string>
    <string name="_001idr060520">001IDR060520</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="investigating_off">Investigating Off.</string>
    <string name="ins_aditya_trivedi">Ins. Aditya Trivedi</string>
    <string name="qq">################</string>
    <string name="qqq">################</string>
    <string name="qqqq">######</string>
    <string name="recognized_text_will_be_shown_here">Recognized Text will be shown here!</string>
    <string name="genrate_certificate">GENRATE CERTIFICATE</string>


</resources>
