<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/LOGO"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintHorizontal_bias="0.497"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/haveid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665" />

        <Button
            android:id="@+id/signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/lightgrey"
            android:textSize="20sp"
            android:background="@drawable/button1"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.750" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:textSize="20sp"
            android:textColor="@color/lightgrey"
            android:background="@drawable/inputfield"

            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:textSize="20sp"
            android:textColor="@color/lightgrey"
            android:inputType="textPassword"
            android:background="@drawable/inputfield"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.596" />


</androidx.constraintlayout.widget.ConstraintLayout>